# fujinet-pc

./: .gitignore  CMakeLists - Copy.txt  CMakeLists.txt  README.md  TODO.md  Windows.md  build_version.py  build_webui.py  config.h.in  macOS.md
.github/workflows/: build.yml
components/libsmb2/: CMakeLists.txt
components/libsmb2/buildtools/: README  autoframework  build.sh
components/libsmb2/include/smb2/: libsmb2.h
components/libsmb2/lib/: aes128ccm.c  compat.c  compat.h  dcerpc.c  errors.c  init.c  libsmb2.c  smb3-seal.c  socket.c  sync.c
data/: autorun.atr  mount-and-boot.atr
data/BUILD_ATARI/www/: index.html  restart.html  settings.js  utils.js
data/webui/config/: fujinet-pc-apple.yaml  fujinet-pc-atari.yaml
data/webui/device_specific/BUILD_ATARI/: autorun.atr
data/webui/template/www/: index.tmpl.html
data/webui/template/www/css/: core.tmpl.css
data/webui/template/www/js/: settings.tmpl.js  utils.js
data/www/: index.html  settings.js  utils.js
distfiles/: fnconfig.ini
include/: debug.h  version.h
lib/EdUrlParser/: EdUrlParser.cpp  EdUrlParser.h
lib/FileSystem/: fnDirCache.h  fnFS.cpp  fnFS.h  fnFile.cpp  fnFile.h  fnFileLocal.cpp  fnFileLocal.h  fnFileMem.cpp  fnFileMem.h  fnFileSMB.h  fnFileTNFS.cpp  fnFileTNFS.h  fnFsFTP.cpp  fnFsFTP.h  fnFsSD.cpp  fnFsSD.h  fnFsSMB.cpp  fnFsSMB.h  fnFsSPIF.cpp  fnFsSPIF.h  fnFsSPIFFS.cpp  fnFsSPIFFS.h  fnFsTNFS.cpp  fnFsTNFS.h
lib/TNFSlib/: tnfslib.cpp  tnfslib.h  tnfslibMountInfo.cpp  tnfslibMountInfo.h
lib/base64/: base64.c
lib/bus/iwm/: Connection.cpp  TCPConnection.cpp  iwm.cpp  iwm.h  iwm_ll.cpp  iwm_ll.h  iwm_slip.cpp  iwm_slip.h  iwm_usb.cpp  iwm_usb.h
lib/bus/sio/: sio.cpp  sio.h
lib/bus/sio/siocom/: fnSioCom.cpp  netsio.cpp  netsio.h  netsio_proto.h
lib/compat/: compat_esp.h  compat_gettimeofday.c  compat_gettimeofday.h  compat_inet.c  compat_inet.h  compat_string.h  compat_uname.h  strlcat.c  strlcpy.c  win32_uname.c
lib/config/: fnConfig.cpp  fnConfig.h  fnc_general.cpp  fnc_load.cpp  fnc_printer.cpp  fnc_save.cpp  fnc_serial.cpp  fnc_util.cpp  fnc_wifi.cpp
lib/device/: device.h  disk.h  modem.h
lib/device/iwm/: clock.cpp  cpm.cpp  cpm.h  disk.cpp  disk.h  disk2.cpp  disk2.h  fuji.cpp  fuji.h  modem.cpp  modem.h  network.cpp  network.h  printer.cpp
lib/device/rs232/: fuji.cpp  network.cpp
lib/device/sio/: apetime.cpp  apetime.h  cassette.cpp  cassette.h  disk.cpp  disk.h  fuji.cpp  fuji.h  modem.cpp  modem.h  network.cpp  network.h  pclink.cpp  printer.cpp  printer.h  siocpm.cpp  siocpm.h  udpstream.cpp  udpstream.h
lib/fnjson/: fnjson.cpp
lib/ftp/: fnFTP.cpp  fnFTP.h
lib/fuji/: fujiCmd.h  fujiDisk.h  fujiHost.cpp  fujiHost.h
lib/hardware/: fnBluetooth.cpp  fnDummyWiFi.cpp  fnDummyWiFi.h  fnNetSIO.cpp  fnNetSIO.h  fnSystem.cpp  fnSystem.h  fnSystemNet.cpp  fnUART.cpp  fnUART.h  fnWiFi.h  led.cpp  led.h
lib/http/: fnHttpClient.h  httpService.cpp  httpService.h  httpServiceBrowser.cpp  httpServiceBrowser.h  httpServiceConfigurator.cpp  httpServiceConfigurator.h  httpServiceParser.cpp  mgHttpClient.cpp  mgHttpClient.h
lib/media/: media.h
lib/media/apple/: mediaType.cpp  mediaType.h  mediaTypeDO.cpp  mediaTypeDO.h  mediaTypeDSK.cpp  mediaTypeDSK.h  mediaTypePO.cpp  mediaTypePO.h  mediaTypeWOZ.cpp  mediaTypeWOZ.h
lib/media/atari/: diskType.cpp  diskType.h  diskTypeAtr.cpp  diskTypeAtr.h  diskTypeAtx.cpp  diskTypeAtx.h  diskTypeXex.cpp  diskTypeXex.h
lib/modem/: modem.cpp  modem.h
lib/modem-sniffer/: modem-sniffer.cpp
lib/mongoose/: mongoose.c  mongoose.h
lib/network-protocol/: FS.cpp  FTP.cpp  HTTP.cpp  HTTP.h  Protocol.cpp  ProtocolParser.cpp  ProtocolParser.h  SMB.cpp  SSH.cpp  SSH.h  TCP.cpp  TNFS.cpp  Telnet.cpp  Test.cpp  UDP.cpp  UDP.h
lib/printer-emulator/: atari_1025.h  atari_1027.h  atari_1029.h  atari_820.h  atari_822.h  atari_825.h  atari_xdm121.h  atari_xmm801.h  epson_80.cpp  epson_80.h  epson_tps.h  file_printer.cpp  file_printer.h  html_printer.h  okimate_10.h  pdf_printer.cpp  pdf_printer.h  png_printer.h  printer_emulator.cpp  svg_plotter.cpp  svg_plotter.h
lib/runcpm/: abstraction_fujinet.h  abstraction_fujinet_apple2.h  cpm.h
lib/sio/: cassette.cpp  cassette.h  disk.cpp  disk.h  diskType.cpp  diskType.h  diskTypeAtr.cpp  diskTypeAtr.h  diskTypeAtx.cpp  diskTypeAtx.h  diskTypeXex.cpp  diskTypeXex.h  fuji.cpp  fuji.h  fujiDisk.h  fujiHost.cpp  midimaze.cpp  modem.cpp  modem.h  network.cpp  network.h  sio.cpp  sio.h
lib/siocom/: fnSioCom.cpp  fnSioCom.h  netsio.cpp  netsio.h  netsio_proto.h  serialsio.cpp  serialsio.h  sioport.h
lib/slip/: CloseRequest.cpp  CloseResponse.cpp  ControlRequest.cpp  ControlResponse.cpp  FormatRequest.cpp  FormatResponse.cpp  InitRequest.cpp  InitResponse.cpp  OpenRequest.cpp  OpenResponse.cpp  ReadBlockRequest.cpp  ReadBlockResponse.cpp  ReadRequest.cpp  ReadResponse.cpp  Request.cpp  ResetRequest.cpp  ResetResponse.cpp  Response.cpp  SLIP.cpp  StatusRequest.cpp  StatusResponse.cpp  WriteBlockRequest.cpp  WriteBlockResponse.cpp  WriteRequest.cpp  WriteResponse.cpp
lib/task/: fnTask.cpp  fnTaskManager.cpp  fnTaskManager.h
lib/tcpip/: fnDNS.cpp  fnDNS.h  fnTcpClient.cpp  fnTcpClient.h  fnTcpServer.cpp  fnUDP.cpp  fnUDP.h
lib/utils/: string_utils.cpp  string_utils.h  utils.cpp  utils.h
src/: CMakeLists.txt  main.cpp
